--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -23,6 +23,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@android:color/darker_gray"
+                android:contentDescription="@string/crime_photo_no_image_description"
                 android:cropToPadding="true"
                 android:scaleType="centerInside" />
 
@@ -30,7 +31,8 @@
                 android:id="@+id/crime_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_menu_camera" />
+                android:src="@android:drawable/ic_menu_camera"
+                android:contentDescription="@string/crime_photo_button_description"/>
         </LinearLayout>
 
         <LinearLayout
